2-API dot net core

--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=DESKTOP-0GAULP5\\SQLEXPRESS;Database=IdentityApp;Trusted_Connection=True;MultipleActiveResultsets=True;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "Key": "1n5bz3fJexQ4LcydqxgsCutA4gh4BHbf",
+    "ExpiresInDays": 15,
+    "Issuer": "http://localhost:5225",
+    "http": "http://localhost:5225"
+
+
   }
 }
